--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,9 @@
         }
     ],
     "require": {
-        "php": "^7.2|^8.1",
+        "php": "^7.1|^8.0",
         "ahsankhatri/firestore-php": "master",
+        "aloha/twilio": "^5.0",
         "ambrosethebuild/envato-purchase-code-verifier": "dev-master",
         "anandsiddharth/laravel-paytm-wallet": "^2.0",
         "anlutro/l4-settings": "^1.0",
@@ -75,17 +76,18 @@
         "rachidlaasri/laravel-installer": "^4.1",
         "rap2hpoutre/laravel-log-viewer": "^1.7",
         "rappasoft/laravel-livewire-tables": "^1.11",
+        "razorpay/razorpay": "^2.5",
         "ryangjchandler/blade-tabler-icons": "^1.1",
         "spatie/laravel-backup": "^6.14",
         "spatie/laravel-medialibrary": "^8.0.0",
         "spatie/laravel-model-status": "^1.10",
         "spatie/laravel-permission": "^3.3",
+        "srmklive/paypal": "~3.0",
         "willvincent/laravel-rateable": "^2.3"
     },
     "require-dev": {
         "dipeshsukhia/laravel-country-state-city-data": "^1.0",
         "facade/ignition": "^2.5",
-        "fakerphp/faker": "^1.19",
         "laracasts/generators": "^2.0",
         "laravel/sail": "^0.0.5",
         "mockery/mockery": "^1.4.2",
